objects/ACCObjTest1__c.object
<CustomObject>
    <fields>
        <fullName>ACCField1__c</fullName>
        <label>ACCField1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ACCField2__c</fullName>
        <label>ACCField2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PLt1__c</fullName>
        <description>Test Comment For this</description>
        <label>PLt1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Plt3__c</fullName>
        <description>Add Comment</description>
        <label>Plt3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>ACCObjTest1</label>
    <nameField>
        <label>ACCObjTest1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ACCObjTest1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>